correction faiblesse detecter et ecriture doc